--- a/frontend/src/templates/entry.html
+++ b/frontend/src/templates/entry.html
@@ -29,6 +29,7 @@
                         Friedrichstraße 3<br>
                         <a href="https://www.conclurer.com">www.conclurer.com</a><br>
                         Mail: <a href="mailto:kontakt@conclurer.com">info@bonita.de</a>
+
                     </p>
                     <ul class="business-social">
                         <li class="business-social-item">
@@ -39,15 +40,33 @@
                             </a>
                         </li>
                     </ul>
-g
+                    <div class="business-membership">
+                        <li class="business-membership-item">
+                            <a href="#">
+                                <img src="XX" alt="H.D.H. Mitglied">
+                            </a>
+                        </li>
+                        <li class="business-membership-item">
+                            <a href="#">
+                                <img src="XX" alt="H.D.H. Mitglied">
+                            </a>
+                        </li>
+                        <li class="business-membership-item">
+                            <a href="#">
+                                <img src="XX" alt="H.D.H. Mitglied">
+                            </a>
+                        </li>
+                    </div>
                 </div>
             </div>
             <div class="business-content">
                 <div class="business-description">
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                         ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
                         dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                        sit amet.</p>
+                        sit amet.
+                    </p>
                 </div>
                 <div class="business-location">
                     Location #TODO
