--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -15,7 +15,9 @@
     <div class="entryhead">
         <div class="entryhead-main" style="background-image:url('http://placekitten.com/1200/400')">
             <div class="entryhead-main-title">
-                <h1>Reinhard Mode</h1>
+                <h1>Reinhard Mode
+                    <img src="https://www.heidenheimerleben.de/site/templates/assets/hdh-logo.jpg" alt="H.D.H. Mitglied"/>
+                </h1>
             </div>
         </div>
         <div class="entryhead-more">
@@ -30,7 +32,34 @@
         </div>
     </div>
 </div>
-(Remove the divs to change the layout variations)
+<div class="container">
+    <div class="sitenav">
+        <ul class="sitenav-items">
+            <li class="sitenav-item">
+                <a class="is-active" href="#scrollto">Info</a>
+            </li>
+            <li class="sitenav-item">
+                <a href="#scrollto">Erleben</a>
+            </li>
+            <li class="sitenav-item">
+                <a href="#scrollto">Produkte</a>
+            </li>
+            <li class="sitenav-item">
+                <a href="#scrollto">Kontakt</a>
+            </li>
+        </ul>
+        <div class="sitenav-actions">
+           <a href="#" class="button primary">
+               <i class="far fa-star"></i>
+               212
+               <span class="button-separator"></span>
+               Empfehlen
+           </a>
+        </div>
+    </div>
+</div>
+
+<script src="https://kit.fontawesome.com/b758d7c863.js"></script>
 </body>
 </html>
 
