--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -32,34 +32,279 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container sticky">
     <div class="sitenav">
-        <ul class="sitenav-items">
-            <li class="sitenav-item">
-                <a class="is-active" href="#scrollto">Info</a>
-            </li>
-            <li class="sitenav-item">
-                <a href="#scrollto">Erleben</a>
-            </li>
-            <li class="sitenav-item">
-                <a href="#scrollto">Produkte</a>
-            </li>
-            <li class="sitenav-item">
-                <a href="#scrollto">Kontakt</a>
-            </li>
-        </ul>
-        <div class="sitenav-actions">
-           <a href="#" class="button primary">
-               <i class="far fa-star"></i>
-               212
-               <span class="button-separator"></span>
-               Empfehlen
-           </a>
+        <div class="sitenav-inner">
+            <ul class="sitenav-items">
+                <li class="sitenav-item">
+                    <a class="is-active" href="#scrollto">Info</a>
+                </li>
+                <li class="sitenav-item">
+                    <a href="#scrollto">Erleben</a>
+                </li>
+                <li class="sitenav-item">
+                    <a href="#scrollto">Produkte</a>
+                </li>
+                <li class="sitenav-item">
+                    <a href="#scrollto">Kontakt</a>
+                </li>
+            </ul>
+            <div class="sitenav-actions">
+               <a href="#" class="button primary">
+                   <i class="far fa-star"></i>
+                   212
+                   <span class="button-separator"></span>
+                   Empfehlen
+               </a>
+            </div>
         </div>
     </div>
 </div>
 
+<div class="entry-basics">
+    <div class="entry-basics-inner container container--default">
+        <div class="entry-basics-text">
+            <h3>Damenmode in Heidenheim</h3>
+            <p>
+                Reinhard Mode ein Modehaus aus Tradition. Seit Generationen stehen wir für beste Qualität, hochwertige Marken und erstklassigen Service zu fairen Preisen - das ist unsere oberste Devise und gilt selbstverständlich für all unsere Kunden.
+                Wir möchten, dass Sie sich bei uns wohlfühlen. Deshalb haben wir uns zum Ziel gesetzt, Sie individuell und ausführlich zu beraten, um mit Ihnen gemeinsam das Passende zu finden.
+            </p>
+            <p>
+                Erfreuen Sie sich an unseren spektakulären Events (wie z. B. unsere Modenschau zur Saisoneröffnung) und lassen Sie sich bei angenehmer Atmosphäre durch die aktuellen Inspirationen der Saison dahingleiten.
+                Ein Einkaufserlebnis der Extraklasse.
+                <br><a href="#showmorejsstuff">Weiterlesen (…)</a>
+            </p>
+            <div class="entry-bascis-links">
+                <a href="#" class="button medium">
+                    <i class="far fa-globe"></i>
+                    Webseite
+                </a>
+                <a href="#contact" class="button medium">
+                    <i class="far fa-envelope"></i>
+                    Kontakt
+                </a>
+                <a href="#" class="button medium">
+                    <i class="fab fa-facebook"></i>
+                    Facebook
+                </a>
+                <a href="#" class="button medium">
+                    <i class="fab fa-instagram"></i>
+                    Instagram
+                </a>
+            </div>
+        </div>
+        <div class="entry-basics-businesshours">
+            <h3>Öffnungszeiten</h3>
+            <ul class="business-times">
+                <li class="business-times-item">
+                    <div class="business-times-day">Montag</div>
+                    <div class="business-times-hours">09:30-18:00</div>
+                </li><li class="business-times-item">
+                <div class="business-times-day">Dienstag</div>
+                <div class="business-times-hours">09:30-18:00</div>
+            </li><li class="business-times-item">
+                <div class="business-times-day">Mittwoch</div>
+                <div class="business-times-hours">09:30-18:00</div>
+            </li><li class="business-times-item">
+                <div class="business-times-day">Donnerstag</div>
+                <div class="business-times-hours">09:30-18:00</div>
+            </li><li class="business-times-item">
+                <div class="business-times-day">Freitag</div>
+                <div class="business-times-hours">09:30-18:00</div>
+            </li><li class="business-times-item">
+                <div class="business-times-day">Samstag</div>
+                <div class="business-times-hours">09:30-16:00</div>
+            </li></ul>
+            <a href="#" class="cityschex">
+                <img src="https://www.heidenheimerleben.de/site/templates/assets/city-schexs-hdh.png" about="City Schex"/>
+                <div class="cityschex-inner">
+                    Wir akzeptieren gerne <br>
+                    City Schexs
+                </div>
+            </a>
+        </div>
+        <div class="entry-basics-actions">
+            actions für tel und kontakt
+        </div>
+    </div>
+</div>
+
+<div class="entrylink">
+    <div class="container container--default">
+        <div class="entrylink-title">
+            <h3>Erleben</h3>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Tile with experiences here...
+            </a>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Tile with experiences here...
+            </a>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Tile with experiences here...
+            </a>
+        </div>
+    </div>
+    <div class="entrylink-more">
+        <a href="#" class="button medium">
+            Show all
+        </a>
+    </div>
+</div>
+
+<div class="entrylink">
+    <div class="container container--default">
+        <div class="entrylink-title">
+            <h3>Produkte</h3>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Produktkachel hier
+            </a>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Produktkachel hier
+            </a>
+        </div>
+        <div class="entrylink-item">
+            <a href="#">
+                Produktkachel hier
+            </a>
+        </div>
+    </div>
+    <div class="entrylink-more">
+        <a href="#" class="button medium">
+            Show all
+        </a>
+    </div>
+</div>
+
+<div class="entrycontact">
+    <div class="container container--default">
+        <div class="entrycontact-title">
+            <h3>Kontakt</h3>
+        </div>
+        <div class="entrycontact-cv">
+            <a href="#modalwithform" class="button primary">
+                <i class="far fa-envelope"></i>
+                Nachricht senden
+            </a>
+            <div class="entrycontact-group">
+                <div class="entrycontact-group-icon">
+                    <i class="far fa-map-marker"></i>
+                </div>
+                <div class="entrycontact-group-desc">
+                    Reinhard Mode<br>
+                    Hauptstraße 47<br>
+                    89522 Heidenheim
+                </div>
+            </div>
+            <div class="entrycontact-group">
+                <div class="entrycontact-group-icon">
+                    <i class="far fa-globe"></i>
+                </div>
+                <div class="entrycontact-group-desc">
+                    <a href="#">www.reinhard-mode.de</a>
+                </div>
+            </div>
+            <div class="entrycontact-group">
+                <div class="entrycontact-group-icon">
+                    <i class="far fa-envelope"></i>
+                </div>
+                <div class="entrycontact-group-desc">
+                    <a href="mailtp:cryptlink">reinhard@mode-demo.de</a>
+                </div>
+            </div>
+            <div class="entrycontact-group">
+                <div class="entrycontact-group-icon">
+                    <i class="far fa-phone"></i>
+                </div>
+                <div class="entrycontact-group-desc">
+                    <a href="tel:">07321 4800 443</a>
+                </div>
+            </div>
+        </div>
+        <div class="entrycontact-map">
+            <div class="entrycontact-map-wrap">
+                Map here
+            </div>
+            <a href="#routenplaner">Route berechnen</a>
+        </div>
+    </div>
+</div>
+
+<div class="entryimages">
+    <div class="container container--default">
+        <div class="entryimages-title">
+            <h3>Bilder</h3>
+        </div>
+        <div class="entryimages-banner">
+            <div class="banner">
+                <div class="banner-icon">
+                    <img src="360deg.svg" alt="360 Grad Ansicht">
+                </div>
+                <div class="banner-text">
+                    Reinhard Mode bietet einen 360-Grad-Rundgang
+                </div>
+                <div class="banner-actions">
+                    <a target="_blank" href="#" class="button primary">
+                        <i class="far fa-external-link"></i>
+                        Ansehen
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="entryimages-item">
+            <a href="#fullimagewithlightbox">
+                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+            </a>
+        </div>
+        <div class="entryimages-item">
+            <a href="#fullimagewithlightbox">
+                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+            </a>
+        </div>
+        <div class="entryimages-item">
+            <a href="#fullimagewithlightbox">
+                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+            </a>
+        </div>
+        <div class="entryimages-item">
+            <a href="#fullimagewithlightbox">
+                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+            </a>
+        </div>
+        <div class="entryimages-item">
+            <a href="#fullimagewithlightbox">
+                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="entryaction">
+    <a href="#linktofeedback" class="button medium">
+        <i class="far fa-comment-smile"></i>
+        Feedback
+    </a>
+</div>
+
+<script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/js/foundation.min.js"></script>
+<script>
+    $(document).foundation();
+</script>
+
+
 <script src="https://kit.fontawesome.com/b758d7c863.js"></script>
 </body>
 </html>
-
