Fixed a stupid problem

--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -11,6 +11,25 @@
 
 </head>
 <body>
+<div class="header">
+    <div class="header-inner">
+        <div class="header-logo">
+            <a href="/">
+                <img src="logo.png" alt="Heidenheim Erleben"/>
+            </a>
+        </div>
+        <div class="header-toggle">
+            <span class="header-toggl-button">
+                <i class="far fa-bars"></i>
+                Menü
+            </span>
+        </div>
+        <div class="header-navigation">
+            Suche
+            Menü
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="entryhead">
         <div class="entryhead-main" style="background-image:url('http://placekitten.com/1200/400')">
