Header and navigation

--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -54,3 +54,5 @@
 @import 'components/entry-basics';
 @import 'components/sitenav';
 @import 'components/banner';
+@import 'components/header';
+@import 'components/search';
