--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="de">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>HDH Erleben</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700&display=swap" rel="stylesheet">
 
 
@@ -15,18 +15,42 @@
     <div class="header-inner">
         <div class="header-logo">
             <a href="/">
-                <img src="logo.png" alt="Heidenheim Erleben"/>
+                <img alt="Heidenheim Erleben" src="logo.png"/>
             </a>
         </div>
         <div class="header-toggle">
-            <span class="header-toggl-button">
+            <span class="header-toggle-button" data-toggle="head-nav">
                 <i class="far fa-bars"></i>
                 Menü
             </span>
         </div>
-        <div class="header-navigation">
-            Suche
-            Menü
+        <div class="header-navigation" data-toggler=".header-navigation--is-active" id="head-nav">
+            <form action="/" class="search" method="get">
+                <input class="search-input" placeholder="Suchen ..." type="text"/>
+                <button class="search-submit" type="submit">
+                    <i class="far fa-search"></i>
+                </button>
+            </form>
+            <ul class="navigation">
+                <li class="navigation-item">
+                    <a href="#">
+                        <i class="navigation-item-icon far fa-compass"></i>
+                        Entdecken
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">
+                        <i class="navigation-item-icon far fa-calendar"></i>
+                        Events
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">
+                        <i class="navigation-item-icon far fa-bars"></i>
+                        Infos
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
@@ -35,16 +59,18 @@
         <div class="entryhead-main" style="background-image:url('http://placekitten.com/1200/400')">
             <div class="entryhead-main-title">
                 <h1>Reinhard Mode
-                    <img src="https://www.heidenheimerleben.de/site/templates/assets/hdh-logo.jpg" alt="H.D.H. Mitglied"/>
+                    <img alt="H.D.H. Mitglied"
+                         src="https://www.heidenheimerleben.de/site/templates/assets/hdh-logo.jpg"/>
                 </h1>
             </div>
         </div>
         <div class="entryhead-more">
             <div class="entryhead-logo">
-                <img src="https://www.heidenheimerleben.de/site/assets/files/8864/reinhard_logo_zw_4c_rz_neu.jpg" alt="Reinhard Mode"/>
+                <img alt="Reinhard Mode"
+                     src="https://www.heidenheimerleben.de/site/assets/files/8864/reinhard_logo_zw_4c_rz_neu.jpg"/>
             </div>
-            <div class="entryhead-gallery"  style="background-image:url('http://placekitten.com/400/300')">
-                <a href="#gallery" class="entryhead-gallery-label">
+            <div class="entryhead-gallery" style="background-image:url('http://placekitten.com/400/300')">
+                <a class="entryhead-gallery-label" href="#gallery">
                     Alle Fotos (4)
                 </a>
             </div>
@@ -69,12 +95,12 @@
                 </li>
             </ul>
             <div class="sitenav-actions">
-               <a href="#" class="button primary">
-                   <i class="far fa-star"></i>
-                   212
-                   <span class="button-separator"></span>
-                   Empfehlen
-               </a>
+                <a class="button primary" href="#">
+                    <i class="far fa-star"></i>
+                    212
+                    <span class="button-separator"></span>
+                    Empfehlen
+                </a>
             </div>
         </div>
     </div>
@@ -85,28 +111,32 @@
         <div class="entry-basics-text">
             <h3>Damenmode in Heidenheim</h3>
             <p>
-                Reinhard Mode ein Modehaus aus Tradition. Seit Generationen stehen wir für beste Qualität, hochwertige Marken und erstklassigen Service zu fairen Preisen - das ist unsere oberste Devise und gilt selbstverständlich für all unsere Kunden.
-                Wir möchten, dass Sie sich bei uns wohlfühlen. Deshalb haben wir uns zum Ziel gesetzt, Sie individuell und ausführlich zu beraten, um mit Ihnen gemeinsam das Passende zu finden.
+                Reinhard Mode ein Modehaus aus Tradition. Seit Generationen stehen wir für beste Qualität, hochwertige
+                Marken und erstklassigen Service zu fairen Preisen - das ist unsere oberste Devise und gilt
+                selbstverständlich für all unsere Kunden.
+                Wir möchten, dass Sie sich bei uns wohlfühlen. Deshalb haben wir uns zum Ziel gesetzt, Sie individuell
+                und ausführlich zu beraten, um mit Ihnen gemeinsam das Passende zu finden.
             </p>
             <p>
-                Erfreuen Sie sich an unseren spektakulären Events (wie z. B. unsere Modenschau zur Saisoneröffnung) und lassen Sie sich bei angenehmer Atmosphäre durch die aktuellen Inspirationen der Saison dahingleiten.
+                Erfreuen Sie sich an unseren spektakulären Events (wie z. B. unsere Modenschau zur Saisoneröffnung) und
+                lassen Sie sich bei angenehmer Atmosphäre durch die aktuellen Inspirationen der Saison dahingleiten.
                 Ein Einkaufserlebnis der Extraklasse.
                 <br><a href="#showmorejsstuff">Weiterlesen (…)</a>
             </p>
             <div class="entry-bascis-links">
-                <a href="#" class="button medium">
+                <a class="button medium" href="#">
                     <i class="far fa-globe"></i>
                     Webseite
                 </a>
-                <a href="#contact" class="button medium">
+                <a class="button medium" href="#contact">
                     <i class="far fa-envelope"></i>
                     Kontakt
                 </a>
-                <a href="#" class="button medium">
+                <a class="button medium" href="#">
                     <i class="fab fa-facebook"></i>
                     Facebook
                 </a>
-                <a href="#" class="button medium">
+                <a class="button medium" href="#">
                     <i class="fab fa-instagram"></i>
                     Instagram
                 </a>
@@ -118,24 +148,31 @@
                 <li class="business-times-item">
                     <div class="business-times-day">Montag</div>
                     <div class="business-times-hours">09:30-18:00</div>
-                </li><li class="business-times-item">
-                <div class="business-times-day">Dienstag</div>
-                <div class="business-times-hours">09:30-18:00</div>
-            </li><li class="business-times-item">
-                <div class="business-times-day">Mittwoch</div>
-                <div class="business-times-hours">09:30-18:00</div>
-            </li><li class="business-times-item">
-                <div class="business-times-day">Donnerstag</div>
-                <div class="business-times-hours">09:30-18:00</div>
-            </li><li class="business-times-item">
-                <div class="business-times-day">Freitag</div>
-                <div class="business-times-hours">09:30-18:00</div>
-            </li><li class="business-times-item">
-                <div class="business-times-day">Samstag</div>
-                <div class="business-times-hours">09:30-16:00</div>
-            </li></ul>
-            <a href="#" class="cityschex">
-                <img src="https://www.heidenheimerleben.de/site/templates/assets/city-schexs-hdh.png" about="City Schex"/>
+                </li>
+                <li class="business-times-item">
+                    <div class="business-times-day">Dienstag</div>
+                    <div class="business-times-hours">09:30-18:00</div>
+                </li>
+                <li class="business-times-item">
+                    <div class="business-times-day">Mittwoch</div>
+                    <div class="business-times-hours">09:30-18:00</div>
+                </li>
+                <li class="business-times-item">
+                    <div class="business-times-day">Donnerstag</div>
+                    <div class="business-times-hours">09:30-18:00</div>
+                </li>
+                <li class="business-times-item">
+                    <div class="business-times-day">Freitag</div>
+                    <div class="business-times-hours">09:30-18:00</div>
+                </li>
+                <li class="business-times-item">
+                    <div class="business-times-day">Samstag</div>
+                    <div class="business-times-hours">09:30-16:00</div>
+                </li>
+            </ul>
+            <a class="cityschex" href="#">
+                <img about="City Schex"
+                     src="https://www.heidenheimerleben.de/site/templates/assets/city-schexs-hdh.png"/>
                 <div class="cityschex-inner">
                     Wir akzeptieren gerne <br>
                     City Schexs
@@ -170,7 +207,7 @@
         </div>
     </div>
     <div class="entrylink-more">
-        <a href="#" class="button medium">
+        <a class="button medium" href="#">
             Show all
         </a>
     </div>
@@ -198,7 +235,7 @@
         </div>
     </div>
     <div class="entrylink-more">
-        <a href="#" class="button medium">
+        <a class="button medium" href="#">
             Show all
         </a>
     </div>
@@ -210,7 +247,7 @@
             <h3>Kontakt</h3>
         </div>
         <div class="entrycontact-cv">
-            <a href="#modalwithform" class="button primary">
+            <a class="button primary" href="#modalwithform">
                 <i class="far fa-envelope"></i>
                 Nachricht senden
             </a>
@@ -266,13 +303,13 @@
         <div class="entryimages-banner">
             <div class="banner">
                 <div class="banner-icon">
-                    <img src="360deg.svg" alt="360 Grad Ansicht">
+                    <img alt="360 Grad Ansicht" src="360deg.svg">
                 </div>
                 <div class="banner-text">
                     Reinhard Mode bietet einen 360-Grad-Rundgang
                 </div>
                 <div class="banner-actions">
-                    <a target="_blank" href="#" class="button primary">
+                    <a class="button primary" href="#" target="_blank">
                         <i class="far fa-external-link"></i>
                         Ansehen
                     </a>
@@ -281,43 +318,43 @@
         </div>
         <div class="entryimages-item">
             <a href="#fullimagewithlightbox">
-                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+                <img alt="image1.jpg" src="http://placekitten.com/400/300"/>
             </a>
         </div>
         <div class="entryimages-item">
             <a href="#fullimagewithlightbox">
-                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+                <img alt="image1.jpg" src="http://placekitten.com/400/300"/>
             </a>
         </div>
         <div class="entryimages-item">
             <a href="#fullimagewithlightbox">
-                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+                <img alt="image1.jpg" src="http://placekitten.com/400/300"/>
             </a>
         </div>
         <div class="entryimages-item">
             <a href="#fullimagewithlightbox">
-                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+                <img alt="image1.jpg" src="http://placekitten.com/400/300"/>
             </a>
         </div>
         <div class="entryimages-item">
             <a href="#fullimagewithlightbox">
-                <img src="http://placekitten.com/400/300" alt="image1.jpg"/>
+                <img alt="image1.jpg" src="http://placekitten.com/400/300"/>
             </a>
         </div>
     </div>
 </div>
 
 <div class="entryaction">
-    <a href="#linktofeedback" class="button medium">
+    <a class="button medium" href="#linktofeedback">
         <i class="far fa-comment-smile"></i>
         Feedback
     </a>
 </div>
 
 <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        crossorigin="anonymous"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
