Footer for HDH Erleben

--- a/frontend2/src/templates/entry.html
+++ b/frontend2/src/templates/entry.html
@@ -351,6 +351,92 @@
     </a>
 </div>
 
+<div class="footer">
+    <div class="footer-inner">
+        <div class="container container--default">
+            <div class="footer-title">
+                Mit Unterstützung von
+            </div>
+            <div class="footer-sponsors">
+                <a href="#">
+                    <img src="//placekitten.com/200/100" alt="Sponsor->title"/>
+                </a>
+                <a href="#">
+                    <img src="//placekitten.com/240/100" alt="Sponsor->title"/>
+                </a>
+                <a href="#">
+                    <img src="//placekitten.com/180/100" alt="Sponsor->title"/>
+                </a>
+                <a href="#">
+                    <img src="//placekitten.com/250/100" alt="Sponsor->title"/>
+                </a>
+            </div>
+            <div class="footer-title">
+                Immer aktuell bleiben
+            </div>
+            <div class="footer-social">
+                <a href="#" class="footer-social-item">
+                    <div class="footer-social-item-icon">
+                        <i class="fab fa-facebook"></i>
+                    </div>
+                    <div class="footer-social-item-label">
+                        Facebook
+                    </div>
+                </a>
+            </div>
+            <div class="footer-social">
+                <a href="#" class="footer-social-item">
+                    <div class="footer-social-item-icon">
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <div class="footer-social-item-label">
+                        Instagram
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-end">
+        <div class="container container--default">
+            <ul class="footer-end-nav">
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Mitmachen
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Feedback
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Über uns
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Kontakt
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Datenschutz
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    <a href="#">
+                        Impressum
+                    </a>
+                </li>
+                <li class="footer-end-nav-item">
+                    2019
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <script
         crossorigin="anonymous"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
