--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -17,6 +17,7 @@
 
     <h2>Templates </h2>
     <a href="entry.html" class="button">Entry</a>
+    <a href="basic-page.html" class="button">Basic-Page</a>
 
 
 </div>
