--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -57,4 +57,4 @@
 @import 'components/header';
 @import 'components/search';
 @import 'components/footer';
-@import 'components/basicpage';
+@import 'components/basic';
