--- a/frontend2/src/templates/basic-list.html
+++ b/frontend2/src/templates/basic-list.html
@@ -54,18 +54,58 @@
         </div>
     </div>
 </div>
-<div class="basicpage">
+<div class="basiclist">
     <div class="container container--slim">
         <div class="basic-title">
-            <h1>Imprint</h1>
+            <h1>Mehr Informationen</h1>
         </div>
-        <div class="basicpage-inner">
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
+        <div class="basiclist-item">
+            <div class="basiclist-item-image">
+                <a href="#">
+                    <img src="//placekitten.com/400/300" alt="Page title"/>
+                </a>
+            </div>
+            <div class="basiclist-item-meta">
+                <a href="#">
+                    <h3>Page title</h3>
+                </a>
+                <p>
+                    Short text capped to a number of words. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                </p>
+                <a href="#">Mehr erfahren</a>
+            </div>
+        </div>
+        <div class="basiclist-item">
+            <div class="basiclist-item-image">
+                <a href="#">
+                    <img src="//placekitten.com/400/300" alt="Page title"/>
+                </a>
+            </div>
+            <div class="basiclist-item-meta">
+                <a href="#">
+                    <h3>Page title</h3>
+                </a>
+                <p>
+                    Short text capped to a number of words. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                </p>
+                <a href="#">Mehr erfahren</a>
+            </div>
+        </div>
+        <div class="basiclist-item">
+            <div class="basiclist-item-image">
+                <a href="#">
+                    <img src="//placekitten.com/400/300" alt="Page title"/>
+                </a>
+            </div>
+            <div class="basiclist-item-meta">
+                <a href="#">
+                    <h3>Page title</h3>
+                </a>
+                <p>
+                    Short text capped to a number of words. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                </p>
+                <a href="#">Mehr erfahren</a>
+            </div>
         </div>
     </div>
 </div>
