--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -58,3 +58,5 @@
 @import 'components/search';
 @import 'components/footer';
 @import 'components/basic';
+@import 'components/maphead';
+@import 'components/directory';
