--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -19,6 +19,7 @@
     <a href="entry.html" class="button">Entry</a>
     <a href="basic-page.html" class="button">Basic-Page</a>
     <a href="basic-list.html" class="button">Basic List</a>
+    <a href="directory.html" class="button">Directory</a>
 
 </div>
 </body>
