--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -52,6 +52,7 @@
 @import 'components/layout';
 @import 'components/entry-head';
 @import 'components/entry-basics';
+@import 'components/entry-tile';
 @import 'components/sitenav';
 @import 'components/banner';
 @import 'components/header';
