--- a/frontend2/src/templates/directory-entries.html
+++ b/frontend2/src/templates/directory-entries.html
@@ -61,96 +61,122 @@
         </div>
     </div>
 </div>
-
-<div class="container sticky">
+<div class="container sticky hidden">
     <div class="sitenav">
         <div class="sitenav-inner">
-            <ul class="sitenav-items">
-                <li class="sitenav-item">
-                    <a href="#scrollto">Einkaufen</a>
-                </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Gastronomie</a>
-                </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Service</a>
-                </li>
-            </ul>
+            <div class="sitenav-actions">
+                <select>
+                    <option>Filter Empfehlungen</option>
+                </select>
+            </div>
         </div>
     </div>
 </div>
 <div class="directory">
     <div class="container container--default">
         <div class="directory-title">
-            <h3>Einkaufen</h3>
+            <h3>Herrenmode</h3>
         </div>
 
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
+        <div class="directory-entry">
+            <div class="entrytile">
+                <a href="#" class="entrytile-image">
+                    <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
+                    <span class="entrytile-open">
+                        <i class="far fa-clock"></i>
+                        Jetzt geöffnet
+                    </span>
+                </a>
+                <a href="#" class="entrytile-title">
+                    <h3>App Pelzhaus</h3>
+                </a>
+                <span class="entrytile-slug">
+                    Pelz- und Hutmoden
                 </span>
-            </a>
+                <a href="#" class="entrytile-link">
+                    Mehr erfahren
+                </a>
+            </div>
         </div>
-
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
+        <div class="directory-entry">
+            <div class="entrytile">
+                <a href="#" class="entrytile-image">
+                    <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
+                    <span class="entrytile-open">
+                        <i class="far fa-clock"></i>
+                        Jetzt geöffnet
+                    </span>
+                </a>
+                <a href="#" class="entrytile-title">
+                    <h3>App Pelzhaus</h3>
+                </a>
+                <span class="entrytile-slug">
+                    Pelz- und Hutmoden
                 </span>
-            </a>
+                <a href="#" class="entrytile-link">
+                    Mehr erfahren
+                </a>
+            </div>
         </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
+        <div class="directory-entry">
+            <div class="entrytile">
+                <a href="#" class="entrytile-image">
+                    <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
+                    <span class="entrytile-open">
+                        <i class="far fa-clock"></i>
+                        Jetzt geöffnet
+                    </span>
+                </a>
+                <a href="#" class="entrytile-title">
+                    <h3>App Pelzhaus</h3>
+                </a>
+                <span class="entrytile-slug">
+                    Pelz- und Hutmoden
                 </span>
-            </a>
+                <a href="#" class="entrytile-link">
+                    Mehr erfahren
+                </a>
+            </div>
         </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
+        <div class="directory-entry">
+            <div class="entrytile">
+                <a href="#" class="entrytile-image">
+                    <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
+                    <span class="entrytile-open">
+                        <i class="far fa-clock"></i>
+                        Jetzt geöffnet
+                    </span>
+                </a>
+                <a href="#" class="entrytile-title">
+                    <h3>App Pelzhaus</h3>
+                </a>
+                <span class="entrytile-slug">
+                    Pelz- und Hutmoden
                 </span>
-            </a>
+                <a href="#" class="entrytile-link">
+                    Mehr erfahren
+                </a>
+            </div>
         </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
+        <div class="directory-entry">
+            <div class="entrytile">
+                <a href="#" class="entrytile-image">
+                    <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
+                    <span class="entrytile-open">
+                        <i class="far fa-clock"></i>
+                        Jetzt geöffnet
+                    </span>
+                </a>
+                <a href="#" class="entrytile-title">
+                    <h3>App Pelzhaus</h3>
+                </a>
+                <span class="entrytile-slug">
+                    Pelz- und Hutmoden
                 </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-title">
-            <h3>Einkaufen</h3>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
+                <a href="#" class="entrytile-link">
+                    Mehr erfahren
+                </a>
+            </div>
         </div>
     </div>
 </div>
