--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -20,6 +20,8 @@
     <a href="basic-page.html" class="button">Basic-Page</a>
     <a href="basic-list.html" class="button">Basic List</a>
     <a href="directory.html" class="button">Directory</a>
+    <a href="directory-entries.html" class="button">Directory Entries</a>
+    <a href="search.html" class="button">Search</a>
 
 </div>
 </body>
