--- a/frontend2/src/templates/search.html
+++ b/frontend2/src/templates/search.html
@@ -54,103 +54,13 @@
         </div>
     </div>
 </div>
-<div class="container">
-    <div class="maphead">
-        <div class="maphead-inner">
-            Karte hier..
-        </div>
-    </div>
-</div>
 
-<div class="container sticky">
-    <div class="sitenav">
-        <div class="sitenav-inner">
-            <ul class="sitenav-items">
-                <li class="sitenav-item">
-                    <a href="#scrollto">Einkaufen</a>
-                </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Gastronomie</a>
-                </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Service</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
 <div class="directory">
     <div class="container container--default">
-        <div class="directory-title">
-            <h3>Einkaufen</h3>
-        </div>
-
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-title">
-            <h3>Einkaufen</h3>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
+        <div class="directory-zero">
+            <h3>Keine Ergebnisse</h3>
+            <p>Ihre Anfrage nach {Suchbegriff} ergab keine Treffer.</p>
+            <a href="#entdecken">Alles anzeigen</a>
         </div>
     </div>
 </div>
