Hero for the homepage

--- a/frontend2/src/templates/homepage.html
+++ b/frontend2/src/templates/homepage.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+
 <div class="header">
     <div class="header-inner header-inner--has-border">
         <div class="header-logo">
@@ -54,111 +55,43 @@
         </div>
     </div>
 </div>
-<div class="container">
-    <div class="maphead">
-        <div class="maphead-inner">
-            Karte hier..
-        </div>
-    </div>
-</div>
-
-<div class="container sticky">
-    <div class="sitenav">
-        <div class="sitenav-inner">
-            <ul class="sitenav-items">
-                <li class="sitenav-item">
-                    <a href="#scrollto">Einkaufen</a>
+<div class="hero" style="background-image:url('https://abload.de/img/header-mockup74kfa.jpg');">
+    <!-- Move to bottom with .hero-inner--is-bottom !-->
+    <div class="hero-inner hero-inner--is-faded ">
+        <div class="hero-action">
+            <h1>Die Einkaufsstadt, die alles hat</h1>
+            <form action="/" class="search" method="get">
+                <input class="search-input" placeholder="Suchen ..." type="text"/>
+                <button class="search-submit" type="submit">
+                    <i class="far fa-search"></i>
+                </button>
+            </form>
+            <ul class="hero-menu">
+                <li class="hero-menu-item">
+                    <a href="#">Einkaufen</a>
                 </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Gastronomie</a>
+                <li class="hero-menu-item">
+                    <a href="#">Service</a>
                 </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Service</a>
+                <li class="hero-menu-item">
+                    <a href="#">Essen</a>
                 </li>
-                <li class="sitenav-item">
-                    <a href="#scrollto">Marken</a>
+                <li class="hero-menu-item">
+                    <a href="#">Markenfinder</a>
+                </li>
+                <li class="hero-menu-item">
+                    <a href="#">Parken</a>
+                </li>
+                <li class="hero-menu-item">
+                    <a href="#">Gutscheine</a>
                 </li>
             </ul>
         </div>
     </div>
-</div>
-<div class="directory">
-    <div class="container container--default">
-        <div class="directory-title">
-            <h3>Einkaufen</h3>
-        </div>
-
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-title">
-            <h3>Einkaufen</h3>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
-        <div class="directory-category">
-            <a href="#" class="directory-tile" style="background-image:url('https://www.heidenheimerleben.de/site/assets/files/9053/shutterstock_59089246.jpg');">
-                <span class="directory-tile-inner">
-                    Category Name
-                </span>
-            </a>
-        </div>
+    <div class="hero-author">
+        "Skyline Dreams" von <a href="#">Philipp Reiner</a>
     </div>
 </div>
-
-ToDo: Markenliste
 
 <div class="footer">
     <div class="footer-inner">
