--- a/frontend2/src/scss/components/_directory.scss
+++ b/frontend2/src/scss/components/_directory.scss
@@ -54,6 +54,7 @@
   &-tile {
     min-height: 150px;
     background-size: cover;
+    background-position: center center;
     width: 100%;
     display: block;
     position: relative;
